--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               class="col-md-12 d-flex align-items-center justify-content-center"
             >
               <img
-                src="anuj.jpg"
+                src="./anuj.jpg"
                 class="rounded-circle img"
                 alt="Placeholder Image"
               />
